crates/tsuno-driver/tests/fixtures/snapshots/fail/verifies_loop_invariant_after_header_comment.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL loop_ok
  loop invariant does not hold
  src/main.rs:3:1: 3:43
PASS main
  all assertions discharged

stderr:
