crates/tsuno-driver/tests/fixtures/snapshots/fail/verifies_nested_loop_contracts.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL nested_loops
  loop invariant does not hold
  src/main.rs:4:7: 4:47
PASS main
  all assertions discharged

stderr:
