crates/tsuno-driver/tests/fixtures/snapshots/fail/verifies_prophecy_everywhere.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL mut_ref_model_everywhere
  mutable reference close failed
  src/main.rs:9:5: 9:6
FAIL helper
  mutable reference close failed
  src/main.rs:20:2: 20:2
PASS main
  all assertions discharged

stderr:
